--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -9,12 +9,12 @@ PROV2457;Curityba;;;;;;;;;
 PROV2420;Punta Porá;;;;;;;;;
 PROV3556;Litani;;;;;;;;;
 PROV3560;Kahpota;;;;;;;;;
-PROV3567;Marabitanas;;;;;;;;;
+PROV3567;Ye'pâmasa;;;;;;;;;
 PROV3444;Mantiqueira;;;;;;;;;
 PROV2402;Uatumã;;;;;;;;;
 PROV3584;Planalto;;;;;;;;;
 PROV1049;Anapa;;;;;;;;;
-PROV2532;Uraricoera;;;;;;;;;
+PROV2532;Xirianá;;;;;;;;;
 PROV2443;Diamantina;;;;;;;;;
 PROV2986;Abrolhos Archipelago;;;;;;;;;
 PROV2988;Riograndense Coast;;;;;;;;;
@@ -46,7 +46,7 @@ PROV3328;Elbing;;;;;;;;;
 PROV3329;Osterode;;;;;;;;;
 PROV3327;Allenstein;;;;;;;;;
 PROV623;Oberwart;;;;;;;;;
-PROV3376;Ariari;;;;;;;;;
+PROV3376;Naexilpüt;;;;;;;;;
 PROV909;Amman;;;;;;;;;
 PROV908;Karak;;;;;;;;;
 PROV278;Ucayali;;;;;;;;;
@@ -64,7 +64,7 @@ PROV3656;Huntington;;;;;;;;;
 PROV3657;Abingdon;;;;;;;;;
 PROV3658;Solikamsk;;;;;;;;;
 PROV3666;Trindade e Martim Vaz;;;;;;;;;
-PROV2401;Isana;;;;;;;;;
+PROV2401;Yamtëgduuh;;;;;;;;;
 PROV4023;Inihta;;;;;;;;;
 PROV4024;Ñumbyte;;;;;;;;;
 PROV4022;Santa Cruz;;;;;;;;;
