--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -94,8 +94,8 @@ PROV3355;Anar Dara;;;;;;;;;;;;;
 PROV3356;Kosan;;;;;;;;;;;;;
 PROV3357;Beersheba;;;;;;;;;;;;;
 PROV3358;Jawlan;;;;;;;;;;;;;
-PROV3359;Tonantins;;;;;;;;;;;;;
-PROV3360;Puerto Carreño;;;;;;;;;;;;;
+PROV3359;Tó-Iawane;;;;;;;;;;;;;
+PROV3360;Kaliawirinai;;;;;;;;;;;;;
 PROV3361;al-Jubayl;;;;;;;;;;;;;
 PROV3362;Afrin;;;;;;;;;;;;;
 PROV3363;Tegucigalpa;;;;;;;;;;;;;
@@ -1374,6 +1374,7 @@ PROV3983;Selibabi;;;;;;;;;;;;;
 PROV3984;Iwalatan;;;;;;;;;;;;;
 PROV3985;Bakel;;;;;;;;;;;;;
 PROV3986;Marela;;;;;;;;;;;;;
+PROV4019;Miraflores;;;;;;;;;;;;;
 PROV4031;El Paso;;;;;;;;;;;;;
 PROV4032;San Vicente;;;;;;;;;;;;;
 PROV4033;Albuquerque;;;;;;;;;;;;;
@@ -1409,6 +1410,8 @@ PROV4063;Nanatsoho;;;;;;;;;;;;;
 PROV4064;Ho'néoxheóvaestse;;;;;;;;;;;;;
 PROV4065;Thóqàhyòp;;;;;;;;;;;;;
 PROV4067;Gakaabikaang;;;;;;;;;;;;;
+PROV4073;Neiva;;;;;;;;;;;;;
+PROV4075;Kadawapurítana;;;;;;;;;;;;;
 PROV4077;Nacaxtlán;;;;;;;;;;;;;
 PROV4078;Chunhuhub;;;;;;;;;;;;;
 PROV4079;Lama'an Ai;;;;;;;;;;;;;
