--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10169,7 +10169,7 @@ PROV1973;Evinayong;Bata;Bata;;Bata;;;;;;;;;
 PROV1974;Mayumbe;Mayumbe;Mayumbe;;Mayumbe;;;;;;;;;
 PROV1975;Moanda;Moanda;Moanda;;Moanda;;;;;;;;;
 PROV1976;Oyem;Oyem;Oyem;;Oyem;;;;;;;;;
-PROV1977;Mucajaí;Nkuna;Nkuna;;Nkuna;;;;;;;;;
+PROV1977;Urihi;Urihi;Urihi;;Urihi;;;;;;;;;
 PROV1978;Madingu;Madingou;Madingou;;Madingou;;;;;;;;;
 PROV1979;Biloka;Biloka;Biloka;;Biloka;;;;;;;;;
 PROV1980;Yambala;Djambala;Djambala;;Djambala;;;;;;;;;
@@ -10394,7 +10394,7 @@ PROV2245;Apetina;Apetina;Apetina;;Apetina;;;;;;;;;
 PROV2246;Maripasoula;Maripasoula;Maripasoula;;Maripasoula;;;;;;;;;
 PROV2247;Bogotá;Bogota;Bogota;;Bogotá;;;;;;;;;
 PROV2248;Ibagué;Ibagué;Ibagué;;Ibagué;;;;;;;;;
-PROV2249;Tunja;Tunja;Tunja;;Tunja;;;;;;;;;
+PROV2249;Chichaytaquiri;Chichaytaquiri;Chichaytaquiri;;Chichaytaquiri;;;;;;;;;
 PROV2250;Manizales;Manizales;Manizales;;Manizales;;;;;;;;;
 PROV2251;Cúcuta;Cucuta;Cucuta;;Cucuta;;;;;;;;;
 PROV2252;Medellín;Medellín;Medellin;;Medellín;;;;;;;;;
@@ -10405,10 +10405,10 @@ PROV2256;Cali;Cali;Cali;;Cali;;;;;;;;;
 PROV2257;Popayán;Popayán;Popayan;;Popayán;;;;;;;;;
 PROV2258;Buenaventura;Buenaventura;Buenaventura;;Buenaventura;;;;;;;;;
 PROV2259;Pasto;Pasto;Pasto;;Pasto;;;;;;;;;
-PROV2260;San José del Guaviare;San José del Guaviare;San Jose del Guaviare;;San Jose del Guaviare;;;;;;;;;
-PROV2261;Obando;Obando;Obando;;Obando;;;;;;;;;
-PROV2262;Casanare;Casanare;Casanare;;Casanare;;;;;;;;;
-PROV2263;Leticia;Leticia;Leticia;;Leticia;;;;;;;;;
+PROV2260;Korébajü;Korébajü;Korébajü;;Korébajü;;;;;;;;;
+PROV2261;Paujil;Paujil;Paujil;;Paujil;;;;;;;;;
+PROV2262;Rawaneruba;Rawaneruba;Rawaneruba;;Rawaneruba;;;;;;;;;
+PROV2263;Igarjaizideta;Igarjaizideta;Igarjaizideta;;Igarjaizideta;;;;;;;;;
 PROV2264;Caracas;Caracas;Caracas;;Caracas;;;;;;;;;
 PROV2265;Guanare;Guanare;Guanare;;Guanare;;;;;;;;;
 PROV2266;Calabozo;Calabozo;Calabozo;;Calabozo;;;;;;;;;
