only guyanas and epv amazon left

--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -118,7 +118,7 @@ PROV2341;San Cosme;;;;;;;;;
 PROV2342;Villarrica;;;;;;;;;
 PROV2343;San Pedro;;;;;;;;;
 PROV4076;Ilha de Bragança;;;;;;;;;
-PROV4093;Purrán;;;;;;;;;
+PROV4093;Quili Malal;;;;;;;;;
 PUR;Purran;;;;;;;;;
 PUR_ADJ;Tshoneka;;;;;;;;;
 LSK_colonial_company_4;Amerikanskaya Kompaniya;;;;;;;;;
