--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -27,7 +27,7 @@ PROV2195;Wampusirpi;;;;;;;;;;;;;
 PROV2196;Brus Laguna;;;;;;;;;;;;;
 PROV2198;Granada;;;;;;;;;;;;;
 PROV2203;Matina;;;;;;;;;;;;;
-PROV2278;La Esmeralda;;;;;;;;;;;;;
+PROV2278;Kashishiwadi;;;;;;;;;;;;;
 PROV2281;Esmeraldas;;;;;;;;;;;;;
 PROV2519;Maymana;;;;;;;;;;;;;
 PROV2689;Vorkuta;;;;;;;;;;;;;
@@ -996,7 +996,7 @@ PROV3487;Lake Rukwa;;;;;;;;;;;;;
 PROV3488;Al-Bahru l-Maytu;;;;;;;;;;;;;
 PROV3489;Lake Tuz;;;;;;;;;;;;;
 PROV3554;Socaire;;;;;;;;;;;;;
-PROV2375;Antofalla;;;;;;;;;;;;;
+PROV2375;La Chimba;;;;;;;;;;;;;
 PROV3555;Wall-che-vtá;;;;;;;;;;;;;
 PROV3557;Esperanza;;;;;;;;;;;;;
 PROV3558;Esket;;;;;;;;;;;;;
@@ -1143,7 +1143,7 @@ PROV3777;Kubanni;;;;;;;;;;;;;
 PROV3778;Lbe;;;;;;;;;;;;;
 PROV3779;Yimbering;;;;;;;;;;;;;
 PROV3780;Koniadj;;;;;;;;;;;;;
-PROV3781;Guasipati;;;;;;;;;;;;;
+PROV3781;Kavanruyen;;;;;;;;;;;;;
 PROV3782;Warkhokh;;;;;;;;;;;;;
 PROV3783;Mbul;;;;;;;;;;;;;
 PROV3784;Gudiri;;;;;;;;;;;;;
@@ -1374,7 +1374,11 @@ PROV3983;Selibabi;;;;;;;;;;;;;
 PROV3984;Iwalatan;;;;;;;;;;;;;
 PROV3985;Bakel;;;;;;;;;;;;;
 PROV3986;Marela;;;;;;;;;;;;;
+PROV4017;San Carlos;;;;;;;;;;;;;
+PROV4018;San Fernando;;;;;;;;;;;;;
 PROV4019;Miraflores;;;;;;;;;;;;;
+PROV4020;Guasipati;;;;;;;;;;;;;
+PROV4021;Wayo;;;;;;;;;;;;;
 PROV4031;El Paso;;;;;;;;;;;;;
 PROV4032;San Vicente;;;;;;;;;;;;;
 PROV4033;Albuquerque;;;;;;;;;;;;;
@@ -1409,8 +1413,10 @@ PROV4062;Wohihu;;;;;;;;;;;;;
 PROV4063;Nanatsoho;;;;;;;;;;;;;
 PROV4064;Ho'néoxheóvaestse;;;;;;;;;;;;;
 PROV4065;Thóqàhyòp;;;;;;;;;;;;;
+PROV4066;Tarija;;;;;;;;;;;;;
 PROV4067;Gakaabikaang;;;;;;;;;;;;;
 PROV4073;Neiva;;;;;;;;;;;;;
+PROV4074;Chinanqú;;;;;;;;;;;;;
 PROV4075;Kadawapurítana;;;;;;;;;;;;;
 PROV4077;Nacaxtlán;;;;;;;;;;;;;
 PROV4078;Chunhuhub;;;;;;;;;;;;;
@@ -1424,6 +1430,7 @@ PROV4085;Miami;;;;;;;;;;;;;
 PROV4086;Timiskaming;;;;;;;;;;;;;
 PROV4087;Angostura;;;;;;;;;;;;;
 PROV4088;Queenstown;;;;;;;;;;;;;
+PROV4094;Pulmarí;;;;;;;;;;;;;
 PROV4095;Fort Kamloops;;;;;;;;;;;;;
 PROV4096;Ayapaskawiyiniwak;;;;;;;;;;;;;
 PROV4097;Neyaashiing;;;;;;;;;;;;;
