--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10420,9 +10420,9 @@ PROV2271;Valera;Valera;Valera;;Valera;;;;;;;;;
 PROV2272;Coro;Coro;Coro;;Coro;;;;;;;;;
 PROV2273;Barquisimeto;Barquisimeto;Barquisimeto;;Barquisimeto;;;;;;;;;
 PROV2274;Barinas;Barinas;Barinas;;Barinas;;;;;;;;;
-PROV2275;Angostura;Angostura;Angostura;;Angostura;;;;;;;;;
+PROV2275;Waiomgomo;Waiomgomo;Waiomgomo;;Waiomgomo;;;;;;;;;
 PROV2276;Tucupita;Tucupita;Tucupita;;Tucupita;;;;;;;;;
-PROV2277;El Jobal;El Jobal;El Jobal;;El Jobal;;;;;;;;;
+PROV2277;Huottöja;Huottöja;Huottöja;;Huottöja;;;;;;;;;
 PROV2278;San Fernando de Atabapo;San Fernando de Atabapo;San Fernando de Atabapo;;San Fernando de Atabapo;;;;;;;;;
 PROV2279;Quito;Quito;Quito;;Quito;;;;;;;;;
 PROV2280;Guayaquil;Guayaquil;Guayaquil;;Guayaquil;;;;;;;;;
@@ -10459,7 +10459,7 @@ PROV2311;Cochabamba;Cochabamba;Cochabamba;;Cochabamba;;;;;;;;;
 PROV2312;Oruro;Oruro;Oruro;;Oruro;;;;;;;;;
 PROV2313;Chuquisaca;Chuquisaca;Chuquisaca;;Chuquisaca;;;;;;;;;
 PROV2314;Potosí;Potosi;Potosi;;Potosí;;;;;;;;;
-PROV2315;Tarija;Tarija;Tarija;;Tarija;;;;;;;;;
+PROV2315;Tupiza;Tupiza;Tupiza;;Tupiza;;;;;;;;;
 PROV2316;Santa Ana;Santa Ana;Santa Ana;;Santa Ana;;;;;;;;;
 PROV2317;Piray;Piray;Piray;;Piray;;;;;;;;;
 PROV2318;Kimome;Kimome;Kimome;;Kimome;;;;;;;;;
@@ -10494,7 +10494,7 @@ PROV2348;Buenos Aires;Buenos Aires;Buenos Aires;;Buenos Aires;;;;;;;;;
 PROV2350;Calfuleufú;Calfuleufú;Calfuleufú;;Calfuleufú;;;;;;;;;
 PROV2349;Junín;Junín;Junín;;Junín;;;;;;;;;
 PROV2352;Thavlil;Thavlil;Thavlil;;Thavlil;;;;;;;;;
-PROV2353;Trenquélaunquén;Trenquélaunquén;Trenquélaunquén;;Trenquélaunquén;;;;;;;;;
+PROV2353;Quetrem Huitrú;Quetrem Huitrú;Quetrem Huitrú;;Quetrem Huitrú;;;;;;;;;
 PROV2354;Bahía Blanca;Bahia Blanca;Bahia Blanca;;Bahía Blanca;;;;;;;;;
 PROV2355;Kuvün Leuwvü;Kuvün Leuwvü;Kuvün Leuwvü;;Kuvün Leuwvü;;;;;;;;;
 PROV2356;Corrientes;Corrientes;Corrientes;;Corrientes;;;;;;;;;
@@ -10531,7 +10531,7 @@ PROV2389;Mendoza;Mendoza;Mendoza;;Mendoza;;;;;;;;;
 PROV2390;Chansiquil;Chansiquil;Chansiquil;;Chansiquil;;;;;;;;;
 PROV2391;Newenken;Newenken;Newenken;;Newenken;;;;;;;;;
 PROV2392;Mercedes de Patagones;Viedma;Viedma;;Viedma;;;;;;;;;
-PROV2393;Quetrem Huitrú;Quetrem Huitrú;Quetrem Huitrú;;Quetrem Huitrú;;;;;;;;;
+PROV2393;Trenquélaunquén;Trenquélaunquén;Trenquélaunquén;;Trenquélaunquén;;;;;;;;;
 PROV2394;Furilu-che;Furilu-che;Furilu-che;;Furilu-che;;;;;;;;;
 PROV2395;Puel Levn;Puel Levn;Puel Levn;;Puel Levn;;;;;;;;;
 PROV2396;Tshúbat;Tshúbat;Tshúbat;;Tshúbat;;;;;;;;;
