--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10461,7 +10461,7 @@ PROV2313;Chuquisaca;Chuquisaca;Chuquisaca;;Chuquisaca;;;;;;;;;
 PROV2314;Potosí;Potosi;Potosi;;Potosí;;;;;;;;;
 PROV2315;Tupiza;Tupiza;Tupiza;;Tupiza;;;;;;;;;
 PROV2316;Santa Ana;Santa Ana;Santa Ana;;Santa Ana;;;;;;;;;
-PROV2317;Piray;Piray;Piray;;Piray;;;;;;;;;
+PROV2317;Santiago de Chiquitos;Santiago de Chiquitos;Santiago de Chiquitos;;Santiago de Chiquitos;;;;;;;;;
 PROV2318;Kimome;Kimome;Kimome;;Kimome;;;;;;;;;
 PROV2319;Ixiamas;;;;;;;;;;;;;
 PROV2320;San Ignacio;San Ignacio;San Ignacio;;San Ignacio;;;;;;;;;
