puppet govts for BOL and CHL

--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -146,6 +146,10 @@ LUB;Lubeck;;;;;;;;;
 PTR;Principality of Trinidad;;;;;;;;;
 PTR_ADJ;Trinidadian;;;;;;;;;
 PZN_colonial_company;Grand Duchy of Posen;;;;;;;;;
+BOL_colonial_company;Grand Duchy of Charcas;;;;;;;;;
+BOL_colonial_company_2;Alto Peru;;;;;;;;;
+BOL_colonial_company_3;Department of Bolivar;;;;;;;;;
+CHL_colonial_company;State of Chile;;;;;;;;;
 patagonian;Patagonian Native;;;;;;;;;
 PTG_prussian_constitutionalism;Mapuche;;;;;;;;;
 PTG_hms_government;Kingdom of Araucania and Patagonia;;;;;;;;;
