--- a/GFM/localisation/000_Garcia.csv
+++ b/GFM/localisation/000_Garcia.csv
@@ -288,3 +288,7 @@ accept_central_americans_cum_title;Grant rights to the Central Americans;;;;;;;;
 accept_central_americans_cum_desc;At a crossroads of cultural evolution, the North American Union faces a transformative choice: welcoming the diverse tapestry of Central American cultures into its collective identity. This inclusive policy champions unity and mutual respect, paving the way for a harmonious era of collaboration and understanding.;;;;;;;;;;;;;
 global_baby_boom_big;Baby Boom;;;;;;;;;;;;;
 global_baby_boom_big_desc;Improvements in life conditions in our country are leading to a country-wide baby boom.;;;;;;;;;;;;;
+ANNEXHSAEVTTITLE;$FROMCOUNTRY$ requests our annexation!;;;;;;;;;;;;;
+ANNEXHSAEVTDESC;The $FROMCOUNTRY_ADJ$ embassy has approached us with a formal request to our government to incorporate into their nation as a sole national entity. While this could surely make us part of a growing state with a lot of potential, our people might find themselves subject to being side-lined and our own interests ignored.;;;;;;;;;;;;;
+REJECTANNEXHSAT;$FROMCOUNTRY$ rejects annexation!;;;;;;;;;;;;;
+REJECTANNEXHSAD;Our request to annex $FROMCOUNTRY$ into our nation has been rejected by $FROMCOUNTRY_ADJ$ leaders and it is clear that they are not willing to accept any time soon, it is time for us to decide if we respect their decision or not.;;;;;;;;;;;;;
