more Brazilmax cringe

--- a/GFM/localisation/SarifLocContributions.csv
+++ b/GFM/localisation/SarifLocContributions.csv
@@ -10,18 +10,38 @@ ANR_absolute_monarchy_ADJ;Andean;;;;;;;;;;;;;
 ANR_prussian_constitutionalism;Andean Kingdom;;;;;;;;;;;;;
 ANR_prussian_constitutionalism_ADJ;Andean;;;;;;;;;;;;;
 ANR_hms_government;Andean Kingdom;;;;;;;;;;;;;
-ANR_absolute_empire;Adesia;;;;;;;;;;;;;
+ANR_absolute_empire;Andesia;;;;;;;;;;;;;
 ANR_absolute_empire_ADJ;Andean;;;;;;;;;;;;;
 ANR_semi_constitutional_empire;Andesia;;;;;;;;;;;;;
 ANR_semi_constitutional_empire_ADJ;Andean;;;;;;;;;;;;;
 ANR_constitutional_empire;Andesia;;;;;;;;;;;;;
 ANR_democracy;United Andes Republic;;;;;;;;;;;;;
 ANR_presidential_dictatorship;Estado Andino;;;;;;;;;;;;;
-ANR_proletarian_dictatorship;Union of Bolivaran Socialist Republics;;;;;;;;;;;;;
+ANR_proletarian_dictatorship;Union of the Andean Peoples;;;;;;;;;;;;;
 ANR_proletarian_dictatorship_ADJ;Andean;;;;;;;;;;;;;
 ANR_fascist_dictatorship;Holy State of the Andes;;;;;;;;;;;;;
 ANR_radical_republic;United Andes Republics;;;;;;;;;;;;;
 ANR_ADJ;Andean;;;;;;;;;;;;;
+FGC_absolute_monarchy;Colombian Empire;;;;;;;;;;;;;
+FGC_absolute_monarchy_ADJ;Bolivarian;;;;;;;;;;;;;
+FGC_prussian_constitutionalism;Colombian Empire;;;;;;;;;;;;;
+FGC_prussian_constitutionalism_ADJ;Bolivarian;;;;;;;;;;;;;
+FGC_hms_government;Colombian Kingdom;;;;;;;;;;;;;
+FGC_hms_government_ADJ;Bolivarian;;;;;;;;;;;;;
+FGC_democracy;United States of Colombia;;;;;;;;;;;;;
+FGC_presidential_dictatorship;Federal Gran Colombia;;;;;;;;;;;;;
+FGC_proletarian_dictatorship;Union of Bolivarian Socialist Republics;;;;;;;;;;;;;
+FGC_proletarian_dictatorship_ADJ;Bolivarian;;;;;;;;;;;;;
+FGC_fascist_dictatorship;Patria Grande;;;;;;;;;;;;;
+FGC_radical_republic;Revolutionary Armed Forces of Colombia;;;;;;;;;;;;;
+FGC_ADJ;Hispanic;;;;;;;;;;;;;
+FGC_conservative;Partido Moderato;Partido Moderato;Partido Moderato;;;;;;;;;;;
+FGC_liberal;Partido Unidad;Partido Unidad;Partido Unidad;;;;;;;;;;;
+FGC_reactionary;Partido Bolivar;Partido Bolivar;Partido Bolivar;;;;;;;;;;;
+FGC_radical;Partido Hispania;Partido Hispania;Partido Hispania;;;;;;;;;;;
+FGC_fascist;Partido Santa Justicia;Partido Santa Justicia;Partido Santa Justicia;;;;;;;;;;;
+FGC_socialist;Partido Andino Unido;Partido Andino Unido;Partido Andino Unido;;;;;;;;;;;
+FGC_communist;Partido Sindicalista;Partido Sindicalista;Partido Sindicalista;;;;;;;;;;;
 GCO_Claims_PBC_title;A stronger Hispanic America;;;;;;;;;;;;;
 GCO_Claims_PBC_desc;Originally led by Venezuelan military Libertador Simòn Bolìvar, Gran Colombia had fought to unite the New Grenadan territories with the Viceroyalty of Peru. José de San Martìn, considered the Libertador for all of Peru, Chile, and Argentina, had his own plans for a united Hispanic America. Unable to put aside their ideological differences, both leaders went their separate ways. We are now in a position to invite the Peruvians and Bolivians into a political union and realize Bolivar's dream. After all, they named it "Bolivia" for a reason, didn't they?;;;;;;;;;;;;;
 Peru_rejects_GCO_title;Peruvian response!;;;;;;;;;;;;;
@@ -94,7 +114,7 @@ form_Andes_PBC;Unite the Andes!;;;;;;;;;;;;;
 62035_desc;A group of filibusters hailing from Rio de Janeiro have massacred a platoon of Colombian soldiers and declared the”Republic of Acre” in an attempt to seek annexation by the Empire of Brazil! In truth, the military had been secretly funding expeditions and dissidents across the border for years, although no one in both the military and the gendarmerie had expected them to succeed! This “Gran Colombia” has now declared they will not concede Acre and are looking to take the entirety of the Amazon from us! If we do not utterly destroy the ambitions of these Bolivarists, our future dominance on the continent will vanish!;;;;;;;;;;;;;
 62036_desc;What was once thought the pipe dreams of men too close to the sun has become a reality as Andean troops marched across Manaus and the eastern settlements of Para! The Brazilian army has been routed in embarrassing defeat after defeat until the Emperor himself called for an end of hostilities, much to the chagrin of his own military leadership who wanted to keep fighting until Colombian forces had reached the outskirts of the coast. With a new treaty signed, dubbed the Treaty of Manaus, what was done was done; “Gran Colombia” took possession of all lands west of the Amazon river and reorganized the territory under the “Department of Acre & the Amazonas”. The future of Colombia shines bright and now rivals even the likes of their Yankee allies to the North!;;;;;;;;;;;;;
 62037_desc;Our frontlines have collapsed and Colombian forces are entrenched in Manaus. We have completely lost control of the Amazonas, and as Colombian forces marched along Para and across the river, the Emperor himself stepped up and called for an end to the war. Dom Pedro II, seeking reconciliation and an end to the needless death of the nation’s young men, signed the Treaty of Manaus with the Andeans to the north. The Colombians now own all lands West of the Amazon river, in the largest loss of land in the Empire of Brazil’s history. Although a permanent peace has hopefully been established through this treaty, Brazil will never be the same as it once was. Many in government have started questioning the legitimacy of Pedro II’s rule because of this, and only time will tell how they will handle the future.;;;;;;;;;;;;;
-62038_desc;When the war began, both sides were unsure who would come out on top; the Brazilians and Colombians were, as European and American analysts stated, “evenly matched”. However, as the Brazilian army surrounded Bogota and besieged Caracas, the government of “Gran Colombia” folded and surrendered. We have taken all of Acre as well as our claims on the Amazonas, drastically reducing the amount of rich lands and territory the Andeans have in their possession. Once again, The Empire of Brazil has established its dominance over the continent and the Colombians wouldn’t dare threaten them again.;;;;;;;;;;;;;
+62038_desc;When the war began, both sides were unsure who would come out on top. The Brazilians and Colombians were, as European and American analysts stated, “evenly matched”. However, as the Brazilian army surrounded Bogota and besieged Caracas, the government of “Gran Colombia” folded and surrendered. We have taken all of Acre as well as our claims on the Amazonas, drastically reducing the amount of rich lands and territory the Andeans have in their possession. Once again, The Empire of Brazil has established its dominance over the continent and the Colombians wouldn’t dare threaten them again.;;;;;;;;;;;;;
 62039_desc;When the battle for Caracas resulted in a total collapse of the military, most in command saw it as the final straw to push back the Brazilian Counteroffensive. It was said that some Generals began acting of their own accord, which the Brazilains took advantage of and seized the capital. Supply lines, having been sabotaged before the war by filibusters and the tribes funded by Brazilian money, were stretched beyond capacity. Federalistas and Centralistas in the military have already begun blaming one another as the President arrived to sign away what little portions of the Amazonas we possessed and all of Acre to the Empire of Brazil. The spirit of Colombia has been crushed today, as those looking gleefully to the unification of Latin America must now look away.;;;;;;;;;;;;;
 62040_desc;The Haitians, despite ejecting the French yoke from the island of Hispaniola, have become Imperialists themselves! The Dominican revolution has called for our help and we must answer with all the help we can provide. They were once promised a position in the Republic of Colombia and that promise will be fulfilled! Once we secure our rightful Hispaniola lands, we can turn our eyes on the rest of the Caribbean, specifically those who need our help in Cuba!;;;;;;;;;;;;;
 62041_desc;Haiti has been repulsed from eastern Hispanola, in large part due to North Andean blood and steel. Once, our government was forced to decline their request of annexation due to the haunting spector of colonial legacies and internal chaos. Today, however, as Pro-Colombian moderates oust their disloyal Monarchist rebels, the Dominican Republic cements its destiny as a member of the Colombian Republic! Just like Libertadors Antonio Valero de Bernabé and Simón Bolívar intended, Colombia and Dominicans will soon be one and the same.;;;;;;;;;;;;;
