--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1374,6 +1374,8 @@ PROV3983;Selibabi;;;;;;;;;;;;;
 PROV3984;Iwalatan;;;;;;;;;;;;;
 PROV3985;Bakel;;;;;;;;;;;;;
 PROV3986;Marela;;;;;;;;;;;;;
+PROV4004;Concepción;;;;;;;;;;;;;
+PROV4005;Bororbaigá;;;;;;;;;;;;;
 PROV4017;San Carlos;;;;;;;;;;;;;
 PROV4018;San Fernando;;;;;;;;;;;;;
 PROV4019;Miraflores;;;;;;;;;;;;;
@@ -1430,6 +1432,7 @@ PROV4085;Miami;;;;;;;;;;;;;
 PROV4086;Timiskaming;;;;;;;;;;;;;
 PROV4087;Angostura;;;;;;;;;;;;;
 PROV4088;Queenstown;;;;;;;;;;;;;
+PROV4092;Ìbúpògi;;;;;;;;;;;;;
 PROV4094;Pulmarí;;;;;;;;;;;;;
 PROV4095;Fort Kamloops;;;;;;;;;;;;;
 PROV4096;Ayapaskawiyiniwak;;;;;;;;;;;;;
