--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10460,7 +10460,7 @@ PROV2312;Oruro;Oruro;Oruro;;Oruro;;;;;;;;;
 PROV2313;Chuquisaca;Chuquisaca;Chuquisaca;;Chuquisaca;;;;;;;;;
 PROV2314;Potosí;Potosi;Potosi;;Potosí;;;;;;;;;
 PROV2315;Tupiza;Tupiza;Tupiza;;Tupiza;;;;;;;;;
-PROV2316;Santa Ana;Santa Ana;Santa Ana;;Santa Ana;;;;;;;;;
+PROV2316;Guarasug'we;Guarasug'we;Guarasug'we;;Guarasug'we;;;;;;;;;
 PROV2317;Santiago de Chiquitos;Santiago de Chiquitos;Santiago de Chiquitos;;Santiago de Chiquitos;;;;;;;;;
 PROV2318;Kimome;Kimome;Kimome;;Kimome;;;;;;;;;
 PROV2319;Ixiamas;;;;;;;;;;;;;
