--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1374,6 +1374,8 @@ PROV3983;Selibabi;;;;;;;;;;;;;
 PROV3984;Iwalatan;;;;;;;;;;;;;
 PROV3985;Bakel;;;;;;;;;;;;;
 PROV3986;Marela;;;;;;;;;;;;;
+PROV4002;Attu;;;;;;;;;;;;;
+PROV4003;Qurungua;;;;;;;;;;;;;
 PROV4004;Concepción;;;;;;;;;;;;;
 PROV4005;Bororbaigá;;;;;;;;;;;;;
 PROV4017;San Carlos;;;;;;;;;;;;;
@@ -1443,3 +1445,4 @@ PROV4100;Phanhkéska;;;;;;;;;;;;;
 PROV4101;Beesowu;;;;;;;;;;;;;
 PROV4102;Nanwuine'nan;;;;;;;;;;;;;
 PROV4103;Ammalapáshkuua;;;;;;;;;;;;;
+PROV4104;Nó'ciria;;;;;;;;;;;;;
