--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10464,7 +10464,7 @@ PROV2316;Guarasug'we;Guarasug'we;Guarasug'we;;Guarasug'we;;;;;;;;;
 PROV2317;Santiago de Chiquitos;Santiago de Chiquitos;Santiago de Chiquitos;;Santiago de Chiquitos;;;;;;;;;
 PROV2318;Kimome;Kimome;Kimome;;Kimome;;;;;;;;;
 PROV2319;Ixiamas;;;;;;;;;;;;;
-PROV2320;San Ignacio;San Ignacio;San Ignacio;;San Ignacio;;;;;;;;;
+PROV2320;Huisruhuaina;Huisruhuaina;Huisruhuaina;;Huisruhuaina;;;;;;;;;
 PROV2321;Manuripe;Manuripe;Manuripe;;Manuripe;;;;;;;;;
 PROV2322;Copiapó;Copiapo;Copiapo;;Copiapó;;;;;;;;;
 PROV2323;La Serena;La Serena;La Serena;;La Serena;;;;;;;;;
