--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -61,7 +61,7 @@ PROV3322;Karashar;;;;;;;;;;;;;
 PROV3323;Kefelong;;;;;;;;;;;;;
 PROV3324;Rzeszow;;;;;;;;;;;;;
 PROV3325;Tiraspol;;;;;;;;;;;;;
-PROV3326;Acre;;;;;;;;;;;;;
+PROV3326;A'kirü;;;;;;;;;;;;;
 PROV3327;Ortelsburg;;;;;;;;;;;;;
 PROV3328;Elbing;;;;;;;;;;;;;
 PROV3329;Allenstein;;;;;;;;;;;;;
@@ -115,8 +115,8 @@ PROV3376;Potsdam;;;;;;;;;;;;;
 PROV3377;Bunj;;;;;;;;;;;;;
 PROV3378;Cavan;;;;;;;;;;;;;
 PROV3379;Bitburg;;;;;;;;;;;;;
-PROV3380;Corumbá;;;;;;;;;;;;;
-PROV3381;Yuruá;;;;;;;;;;;;;
+PROV3380;Orikoripe;;;;;;;;;;;;;
+PROV3381;Wiri-dyapá;;;;;;;;;;;;;
 PROV3382;Abuná;;;;;;;;;;;;;
 PROV3383;Turnhout;;;;;;;;;;;;;
 PROV3384;Kurakh;;;;;;;;;;;;;
@@ -169,7 +169,7 @@ PROV3431;Tawdenni;;;;;;;;;;;;;
 PROV3432;Cavaillon;;;;;;;;;;;;;
 PROV3433;Vielha;;;;;;;;;;;;;
 PROV3434;Bardonecchia;;;;;;;;;;;;;
-PROV3435;Purús;;;;;;;;;;;;;
+PROV3435;Ituxi;;;;;;;;;;;;;
 PROV3436;Yevpatoriya;;;;;;;;;;;;;
 PROV3437;Dzhankóy;;;;;;;;;;;;;
 PROV3438;Yálta;;;;;;;;;;;;;
@@ -1185,7 +1185,7 @@ PROV3819;Caluula;;;;;;;;;;;;;
 PROV3820;Hargeisa;;;;;;;;;;;;;
 PROV3821;Shakka;;;;;;;;;;;;;
 PROV3822;Birao;;;;;;;;;;;;;
-PROV3823;Manú;;;;;;;;;;;;;
+PROV3823;Parkenawa;;;;;;;;;;;;;
 PROV3824;Maingara;;;;;;;;;;;;;
 PROV3825;il-Kaf;;;;;;;;;;;;;
 PROV3826;Batnah;;;;;;;;;;;;;
@@ -1378,6 +1378,8 @@ PROV4002;Attu;;;;;;;;;;;;;
 PROV4003;Qurungua;;;;;;;;;;;;;
 PROV4004;Concepción;;;;;;;;;;;;;
 PROV4005;Bororbaigá;;;;;;;;;;;;;
+PROV4007;Mashcopiro;;;;;;;;;;;;;
+PROV4008;Kamisea;;;;;;;;;;;;;
 PROV4017;San Carlos;;;;;;;;;;;;;
 PROV4018;San Fernando;;;;;;;;;;;;;
 PROV4019;Miraflores;;;;;;;;;;;;;
