--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10445,7 +10445,7 @@ PROV2297;Ica;Ica;Ica;;Ica;;;;;;;;;
 PROV2298;Huaraz;Huaraz;Huaraz;;Huaraz;;;;;;;;;
 PROV2299;Ayacucho;Ayacucho;Ayacucho;;Ayacucho (PER);;;;;;;;;
 PROV2300;Pucallpa;Pucallpa;Pucallpa;;Pucallpa;;;;;;;;;
-PROV2301;Paucartambo;Paucartambo;Paucartambo;;Paucartambo;;;;;;;;;
+PROV2301;Arãsãeri;Arãsãeri;Arãsãeri;;Arãsãeri;;;;;;;;;
 PROV2302;Cusco;Cusco;Cusco;;Cusco;;;;;;;;;
 PROV2303;Puno;Puno;Puno;;Puno;;;;;;;;;
 PROV2304;Arequipa;Arequipa;Arequipa;;Arequipa;;;;;;;;;
@@ -10465,7 +10465,7 @@ PROV2317;Santiago de Chiquitos;Santiago de Chiquitos;Santiago de Chiquitos;;Sant
 PROV2318;Kimome;Kimome;Kimome;;Kimome;;;;;;;;;
 PROV2319;Ixiamas;;;;;;;;;;;;;
 PROV2320;Huisruhuaina;Huisruhuaina;Huisruhuaina;;Huisruhuaina;;;;;;;;;
-PROV2321;Manuripe;Manuripe;Manuripe;;Manuripe;;;;;;;;;
+PROV2321;Hawamano;Hawamano;Hawamano;;Hawamano;;;;;;;;;
 PROV2322;Copiapó;Copiapo;Copiapo;;Copiapó;;;;;;;;;
 PROV2323;La Serena;La Serena;La Serena;;La Serena;;;;;;;;;
 PROV2324;Santiago;Santiago;Santiago;;Santiago;;;;;;;;;
@@ -10661,7 +10661,7 @@ PROV2544;Pago Pago;Pago Pago;Pago Pago;;Pago Pago;;;;;;;;;
 PROV2545;Rarotonga;Rarotonga;Rarotonga;;Rarotonga;;;;;;;;;
 PROV2546;Tongareva;Tongareva;Tongareva;;Tongareva;;;;;;;;;
 PROV2547;Tokelau;Tokelau;Tokelau;;Tokelau;;;;;;;;;
-PROV2549;Tarauacá;Tarauaca;Tarauaca;;Tarauaca;;;;;;;;;
+PROV2549;Kaxinawá;Kaxinawá;Kaxinawá;;Kaxinawá;;;;;;;;;
 PROV2550;Forte do Príncipe;Forte do Principe;Forte do Principe;;Forte do Príncipe;;;;;;;;;
 PROV2551;Marquesas;Marquises;Marquesas;;Marquesas;;;;;;;;;
 PROV2552;Pitcairn;Pitcairn;Pitcairn;;Pitcairn;;;;;;;;;
