--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -998,7 +998,7 @@ PROV3489;Lake Tuz;;;;;;;;;;;;;
 PROV3554;Socaire;;;;;;;;;;;;;
 PROV2375;La Chimba;;;;;;;;;;;;;
 PROV3555;Wall-che-vtá;;;;;;;;;;;;;
-PROV3557;Esperanza;;;;;;;;;;;;;
+PROV3557;Amawáka;;;;;;;;;;;;;
 PROV3558;Esket;;;;;;;;;;;;;
 PROV3559;Koy Aike;;;;;;;;;;;;;
 PROV3561;Rügen;;;;;;;;;;;;;
@@ -1380,9 +1380,17 @@ PROV4004;Concepción;;;;;;;;;;;;;
 PROV4005;Bororbaigá;;;;;;;;;;;;;
 PROV4007;Mashcopiro;;;;;;;;;;;;;
 PROV4008;Kamisea;;;;;;;;;;;;;
+PROV4009;Huancayo;;;;;;;;;;;;;
+PROV4010;Huánuco;;;;;;;;;;;;;
+PROV4011;Katirpisa;;;;;;;;;;;;;
+PROV4012;Kashijint;;;;;;;;;;;;;
+PROV4013;Nauta;;;;;;;;;;;;;
+PROV4014;Iquitos;;;;;;;;;;;;;
+PROV4015;Caballococha;;;;;;;;;;;;;
+PROV4016;Tena;;;;;;;;;;;;;
 PROV4017;San Carlos;;;;;;;;;;;;;
 PROV4018;San Fernando;;;;;;;;;;;;;
-PROV4019;Miraflores;;;;;;;;;;;;;
+PROV4019;Zapatoca;;;;;;;;;;;;;
 PROV4020;Guasipati;;;;;;;;;;;;;
 PROV4021;Wayo;;;;;;;;;;;;;
 PROV4031;El Paso;;;;;;;;;;;;;
@@ -1421,6 +1429,9 @@ PROV4064;Ho'néoxheóvaestse;;;;;;;;;;;;;
 PROV4065;Thóqàhyòp;;;;;;;;;;;;;
 PROV4066;Tarija;;;;;;;;;;;;;
 PROV4067;Gakaabikaang;;;;;;;;;;;;;
+PROV4070;Canelos;;;;;;;;;;;;;
+PROV4071;San Lorenzo;;;;;;;;;;;;;
+PROV4072;Contamana;;;;;;;;;;;;;
 PROV4073;Neiva;;;;;;;;;;;;;
 PROV4074;Chinanqú;;;;;;;;;;;;;
 PROV4075;Kadawapurítana;;;;;;;;;;;;;
@@ -1447,4 +1458,4 @@ PROV4100;Phanhkéska;;;;;;;;;;;;;
 PROV4101;Beesowu;;;;;;;;;;;;;
 PROV4102;Nanwuine'nan;;;;;;;;;;;;;
 PROV4103;Ammalapáshkuua;;;;;;;;;;;;;
-PROV4104;Nó'ciria;;;;;;;;;;;;;
+PROV2293;Nó'ciria;;;;;;;;;;;;;
