--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10427,24 +10427,23 @@ PROV2278;San Fernando de Atabapo;San Fernando de Atabapo;San Fernando de Atabapo
 PROV2279;Quito;Quito;Quito;;Quito;;;;;;;;;
 PROV2280;Guayaquil;Guayaquil;Guayaquil;;Guayaquil;;;;;;;;;
 PROV2282;Loja;Loja;Loja;;Loja;;;;;;;;;
-PROV2283;Zamora;Zamora;Zamora;;Zamora;;;;;;;;;
-PROV2284;Tena;Tena;Tena;;Tena;;;;;;;;;
+PROV2283;Muraiya;Muraiya;Muraiya;;Muraiya;;;;;;;;;
+PROV2284;Tiwakuna;Tiwakuna;Tiwakuna;;Tiwakuna;;;;;;;;;
 PROV2285;Galápagos;Galapagos;Galapagos;;Galápagos;;;;;;;;;
-PROV2286;Caballococha;Caballococha;Caballococha;;Caballococha;;;;;;;;;
+PROV2286;Ngextayáte;Ngextayáte;Ngextayáte;;Ngextayáte;;;;;;;;;
 PROV2287;Yurimaguas;Yurimaguas;Yurimaguas;;Yurimaguas;;;;;;;;;
-PROV2288;Iquitos;Iquitos;Iquitos;;Iquitos;;;;;;;;;
-PROV2289;Flor de Agosto;Flor de Agosto;Flor de Agosto;;Flor de Agosto;;;;;;;;;
+PROV2288;Niyakuxra;Niyakuxra;Niyakuxra;;Niyakuxra;;;;;;;;;
+PROV2289;Ampiyacu;Ampiyacu;Ampiyacu;;Ampiyacu;;;;;;;;;
 PROV2290;Tarapoto;Tarapoto;Tarapoto;;Tarapoto;;;;;;;;;
 PROV2291;Tumbes;Tumbes;Tumbes;;Tumbes;;;;;;;;;
 PROV2292;Trujillo;Trujillo;Trujillo;;Trujillo;;;;;;;;;
-PROV2293;Huánuco;Huanuco;Huanuco;;Huanuco;;;;;;;;;
 PROV2294;Moyobamba;Moyobamba;Moyobamba;;Moyobamba;;;;;;;;;
 PROV2295;Lima;Lima;Lima;;Lima;;;;;;;;;
-PROV2296;Huancayo;Huancayo;Huancayo;;Huancayo;;;;;;;;;
+PROV2296;Chanchamayu;Chanchamayu;Chanchamayu;;Chanchamayu;;;;;;;;;
 PROV2297;Ica;Ica;Ica;;Ica;;;;;;;;;
 PROV2298;Huaraz;Huaraz;Huaraz;;Huaraz;;;;;;;;;
-PROV2299;Ayacucho;Ayacucho;Ayacucho;;Ayacucho (PER);;;;;;;;;
-PROV2300;Pucallpa;Pucallpa;Pucallpa;;Pucallpa;;;;;;;;;
+PROV2299;Ayacucho;Ayacucho;Ayacucho;;Ayacucho;;;;;;;;;
+PROV2300;Shipikoni;Shipikoni;Shipikoni;;Shipikoni;;;;;;;;;
 PROV2301;Arãsãeri;Arãsãeri;Arãsãeri;;Arãsãeri;;;;;;;;;
 PROV2302;Cusco;Cusco;Cusco;;Cusco;;;;;;;;;
 PROV2303;Puno;Puno;Puno;;Puno;;;;;;;;;
