--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -49,7 +49,7 @@ PROV623;Oberwart;;;;;;;;;
 PROV3376;Naexilpüt;;;;;;;;;
 PROV909;Amman;;;;;;;;;
 PROV908;Karak;;;;;;;;;
-PROV278;Ucayali;;;;;;;;;
+PROV278;Pisahua;;;;;;;;;
 PEU_278;Ucayali;;;;;;;;;
 PROV3443;Sabará;;;;;;;;;
 PROV2442;Pitangui;;;;;;;;;
