--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1008,7 +1008,7 @@ PROV3564;Bocas del Toro;;;;;;;;;;;;;
 PROV3565;Paracel Islands;;;;;;;;;;;;;
 PROV3566;Archipiélago del Norte;;;;;;;;;;;;;
 PROV3567;Santa Vitória;;;;;;;;;;;;;
-PROV3568;Bonfim;;;;;;;;;;;;;
+PROV3568;Makuusi;;;;;;;;;;;;;
 PROV807;Koçana;;;;;;;;;;;;;
 PROV3569;Fuerte Olimpo;;;;;;;;;;;;;
 PROV3570;Yrendagüé;;;;;;;;;;;;;
