--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9271,7 +9271,7 @@ PROV824;Janina;Ioannina;Janina;;Janina;;;;;;;;;
 PROV825;Arta;Arta;Arta;;Arta;;;;;;;;;
 PROV826;Corfu;Corfou;Korfu;;Corfú;;;;;;;;;
 PROV827;Zante;Zante;Zante;;Zante;;;;;;;;;
-PROV830;Pirara;Dedeagatch;Dedeagatch;;Dedeagatch;;;;;;;;;
+PROV830;Palamakatoi;Palamakatoi;Palamakatoi;;Palamakatoi;;;;;;;;;
 PROV831;Larissa;Larisa;Larisa;;Larisa;;;;;;;;;
 PROV832;Volos;Volos;Volos;;Vólos;;;;;;;;;
 PROV833;Trikkala;Trikala;Trikkala;;Trikkala;;;;;;;;;
@@ -10171,7 +10171,7 @@ PROV1975;Moanda;Moanda;Moanda;;Moanda;;;;;;;;;
 PROV1976;Oyem;Oyem;Oyem;;Oyem;;;;;;;;;
 PROV1977;Urihi;Urihi;Urihi;;Urihi;;;;;;;;;
 PROV1978;Madingu;Madingou;Madingou;;Madingou;;;;;;;;;
-PROV1979;Biloka;Biloka;Biloka;;Biloka;;;;;;;;;
+PROV1979;Kutari;Kutari;Kutari;;Kutari;;;;;;;;;
 PROV1980;Yambala;Djambala;Djambala;;Djambala;;;;;;;;;
 PROV1981;Impfondo;Impfondo;Impfondo;;Impfondo;;;;;;;;;
 PROV1982;Kinkoki;Kinkoki;Kinkoki;;Kinkoki;;;;;;;;;
@@ -10388,10 +10388,10 @@ PROV2238;Tobago;Tobago;Tobago;;Tobago;;;;;;;;;
 PROV2239;Georgetown;Georgetown;Georgetown;;Georgetown;;;;;;;;;
 PROV2240;Paramaribo;Paramaribo;Paramaribo;;Paramaribo;;;;;;;;;
 PROV2241;Cayenne;Cayenne;Cayenne;;Cayena;;;;;;;;;
-PROV2242;Mahdia;Mahdia;Mahdia;;Maihia;;;;;;;;;
-PROV2243;Essequibo;Essequibo;Essequibo;;Essequibo;;;;;;;;;
-PROV2245;Apetina;Apetina;Apetina;;Apetina;;;;;;;;;
-PROV2246;Maripasoula;Maripasoula;Maripasoula;;Maripasoula;;;;;;;;;
+PROV2242;Imataka;Imataka;Imataka;;Imataka;;;;;;;;;
+PROV2243;Morawana;Morawana;Morawana;;Morawana;;;;;;;;;
+PROV2245;Pïlëuwimë;Pïlëuwimë;Pïlëuwimë;;Pïlëuwimë;;;;;;;;;
+PROV2246;Talhuwen;Talhuwen;Talhuwen;;Talhuwen;;;;;;;;;
 PROV2247;Bogotá;Bogota;Bogota;;Bogotá;;;;;;;;;
 PROV2248;Ibagué;Ibagué;Ibagué;;Ibagué;;;;;;;;;
 PROV2249;Chichaytaquiri;Chichaytaquiri;Chichaytaquiri;;Chichaytaquiri;;;;;;;;;
