--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -7,7 +7,7 @@ PROV2449;Victória;;;;;;;;;
 PROV2462;Kreie-bang-rê;;;;;;;;;
 PROV2457;Curityba;;;;;;;;;
 PROV2420;Punta Porá;;;;;;;;;
-PROV3556;Litani;;;;;;;;;
+PROV3556;Tumucumaque;;;;;;;;;
 PROV3560;Kahpota;;;;;;;;;
 PROV3567;Ye'pâmasa;;;;;;;;;
 PROV3444;Mantiqueira;;;;;;;;;
@@ -57,7 +57,7 @@ PROV2445;Uberaba;;;;;;;;;
 PROV2444;Paracatu;;;;;;;;;
 PROV3445;Itabira;;;;;;;;;
 PROV3446;Rio Pardo de Minas;;;;;;;;;
-PROV3653;Tapanahony;;;;;;;;;
+PROV3653;Pe'reru Tepu;;;;;;;;;
 PROV3654;Opliwa'lako;;;;;;;;;
 PROV3655;Greenville;;;;;;;;;
 PROV3656;Huntington;;;;;;;;;
