central america, colombia (cl = 3), zulia

--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -1072,3 +1072,8 @@ dolgan;Dolgan;;;;;;;;;;;;
 ili_turkish;Ili;;;;;;;;;;;;
 nganasan;Nganasan;;;;;;;;;;;;
 tetserret;Tetserret;;;;;;;;;;;;
+andaqui;Andaki;;;;;;;;;;;;
+tunebo;Tunebo;;;;;;;;;;;;
+yarigui;Yarigui;;;;;;;;;;;;
+muisco;Muisco;;;;;;;;;;;;
+timote;Timote;;;;;;;;;;;;
