--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1384,8 +1384,8 @@ PROV4009;Huancayo;;;;;;;;;;;;;
 PROV4010;Huánuco;;;;;;;;;;;;;
 PROV4011;Katirpisa;;;;;;;;;;;;;
 PROV4012;Kashijint;;;;;;;;;;;;;
-PROV4013;Nauta;;;;;;;;;;;;;
-PROV4014;Iquitos;;;;;;;;;;;;;
+PROV4013;Iquitos;;;;;;;;;;;;;
+PROV4014;Yurimaguas;;;;;;;;;;;;;
 PROV4015;Caballococha;;;;;;;;;;;;;
 PROV4016;Tena;;;;;;;;;;;;;
 PROV4017;San Carlos;;;;;;;;;;;;;
