--- a/GFM/localisation/SarifLocContributions.csv
+++ b/GFM/localisation/SarifLocContributions.csv
@@ -72,8 +72,14 @@ Unite_the_Andes_PBC_title;Elevate the Northerners;;;;;;;;;;;;;
 Unite_the_Andes_PBC_desc;In order to effectively govern our new Colombian states, we must ensure the Criollos are given the same rights as those of us in the South.;;;;;;;;;;;;;
 Unite_the_Andes_LPL_title;Elevate the Andeans;;;;;;;;;;;;;
 Unite_the_Andes_LPL_desc;In order to effectively govern our new Peruvian and Chilean states, we must ensure the Criollos are given the same rights as those of us in Argentina.;;;;;;;;;;;;;
-gco_central_america_title;Colombian Central America;;;;;;;;;;;;;
-gco_central_america_desc; We are beginning to lead the continent behind Pan-Bolivarist ideals. As a stepping stone to secure our plans to propose a union similar to that which Bolivar and Miranda envisioned, we must stabilize and unite the Central American states under effective Colombian leadership. Further, securing Panama and its Isthmus will be one of the most important decisions our country will ever make.;;;;;;;;;;;;;
+choose_capital_GCO_title;Relocate the Capital of Colombia;;;;;;;;;;;;;
+choose_capital_GCO_desc;Many have suggested it is time to take the prospect of relocating our Capital seriously, now that our wounds are healed and the country is stable.;;;;;;;;;;;;;
+guyana_purchase_GCO_title;Purchase British Guyana;;;;;;;;;;;;;
+guyana_purchase_GCO_desc;Though the British contest and have claimed Essequibo for their Colonial Empire, we have good enough relations in matters of trade and prosperity to propose an acquisition of British Guyana. Let us hope they are open to negotiations.;;;;;;;;;;;;;
+suriname_purchase_GCO_title;Purchase Suriname;;;;;;;;;;;;;
+suriname_purchase_GCO_desc;The Dutch are taking our interests in the Guyanese region seriously and we may be able to use our previous British acqusition as a stepping stone to purchase Suriname as well.;;;;;;;;;;;;;
+french_guyana_purchase_GCO_title; Purchase Fremch Guiana;;;;;;;;;;;;;
+french_guyana_purchase_GCO_desc; The French consider Guiana its own state no different from Corsica or the Paris Region. This may be our hardest sale offer yet, but we must attempt to purchase French Guiana.;;;;;;;;;;;;;
 61006_desc;Now that we have centralized the state, it's time to chart the future of our country. Do we remain Peru-Bolivia, or do we become something greater?;;;;;;;;;;;;;
 61007_desc;We must decide the role our military will play in the Confederation.;;;;;;;;;;;;;
 61008_desc;Despite the southern attackers and our own internal strife, the Confederation has prevailed. Nobody can deny the Peru-Bolivian Confederation its right to exist. Many in our administration believe the time is now to pursue our goals of a united Andean empire! Others fear we are not yet ready and need more time to stabilize. What path shall we take?;;;;;;;;;;;;;
@@ -120,6 +126,12 @@ form_Andes_PBC;Unite the Andes!;;;;;;;;;;;;;
 62041_desc;Haiti has been repulsed from eastern Hispanola, in large part due to North Andean blood and steel. Once, our government was forced to decline their request of annexation due to the haunting spector of colonial legacies and internal chaos. Today, however, as Pro-Colombian moderates oust their disloyal Monarchist rebels, the Dominican Republic cements its destiny as a member of the Colombian Republic! Just like Libertadors Antonio Valero de Bernabé and Simón Bolívar intended, Colombia and Dominicans will soon be one and the same.;;;;;;;;;;;;;
 610062_desc;With the formation of the Peru-Boliva confederation, we have made many of our neighbors upset as they see us as a big threat for them. Now, rumours have been circling around that our northern neighbor, Gran Colombia, who recently fought in a civil war to keep their nations united, are planning along with the Chileans to invade us and then partition our union between them. Of course these are simply rumors but the threat that represent Chile and Gran Colombia are far too big to ignore. Now one politician suggest we should organize an emergency draft and prepare for the inevitable, but this will cause too much uproar on not only the rest of the nations in South America but also on our own citizens, what should we do?.;;;;;;;;;;;;;
 62042_desc;In a passionate speech at the US State of the Union Address, President Andrew Jackson expressed support for the Federal union of Colombia. Dispatching Senator Robert B. McAffee to oversee affairs in New Grenada, the ultimate goal of President Jackson involved plans for all participants in the conflict to meet in Bogota to perhaps iron out their differences. Jackson gave instructions to McAffee to maintain friendship and commercial ties to New Grenada throughout the process. Until then, America would remain without diplomatic relations with Venezuela and Ecuador.;;;;;;;;;;;;;
+62043_desc;The Platineans are in violation of our arrangements from the Treaty of Cuzco and Alto Peru is now fighting for it's life! Now is the time for Colombia to decide whether Bolivia is forgotten forever or joins our glorious union!;;;;;;;;;;;;;
+
+
+
+
+
 AGRESSION_WAR_CUT_DOWN_TO_SIZE_NO_INFAMY_NAME_GCO_PBC;Colombian Intervention in the War of the Confederation;;;;;;;;;;;;;
 AGRESSION_WAR_CUT_DOWN_TO_SIZE_NO_INFAMY_NAME_GCO_PEU;Colombian Intervention in the War of the Confederation;;;;;;;;;;;;;
 AGRESSION_WAR_CUT_DOWN_TO_SIZE_NO_INFAMY_NAME_GCO_SPU;Colombian Intervention in the War of the Confederation;;;;;;;;;;;;;
