--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -119,7 +119,7 @@ PROV3323;Karimabad;;;;;;;;;;;;;
 PROV3325;Tell Tamir;;;;;;;;;;;;;
 PROV3348;Maku;;;;;;;;;;;;;
 PROV3350;Qa'in;;;;;;;;;;;;;
-PROV3352;Qasr-e Shirin;;;;;;;;;;;;;
+PROV3352;Sarpol-e Zahab;;;;;;;;;;;;;
 PROV3355;Lash wa Juwayn;;;;;;;;;;;;;
 PROV3356;Ghoryan;;;;;;;;;;;;;
 PROV3386;Shamakhi;;;;;;;;;;;;;
