--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -2054,6 +2054,7 @@ SPC_absolute_empire_ADJ;Aragonese;;;;;;;;;;;;;
 SPC_semi_constitutional_empire_ADJ;Aragonese;;;;;;;;;;;;;
 SPC_constitutional_empire_ADJ;Aragonese;;;;;;;;;;;;;
 SPU;South Peru;;;;;;;;;;;;;
+SPU_prov_gov_conservative;Orbegosistas;;;;;;;;;;;;;
 SPU_ADJ;South Peruvian;;;;;;;;;;;;;
 SRD;Sardinia;;;;;;;;;;;;;
 SRD_ADJ;Sardinian;;;;;;;;;;;;;
