--- a/GFM/localisation/darkness.csv
+++ b/GFM/localisation/darkness.csv
@@ -180,7 +180,7 @@ HYD_1283;Hyderabad;Hyderabad;Hyderabad;;Hyderabad;;;;;;;;;
 ENG_1297;Bombay;Bombay;Bombay;;Bombay;;;;;;;;;
 MYS_1314;Mysore;Mysore;Mysore;;Mysore;;;;;;;;;
 ENG_1317;Travancore;Travancore;Travancore;;Travancore;;;;;;;;;
-PER_1141;Laristan-Sistan;Laristan-Sistan;Laristan-Sistan;;Laristan-Sistan;;;;;;;;;
+PER_1141;Larestan-Sistan;Larestan-Sistan;Larestan-Sistan;;Larestan-Sistan;;;;;;;;;
 PER_1148;Khorasan;Khorasan;Khorasan;;Khorasan;;;;;;;;;
 PER_1138;Khuzestan;Khuzestan;Chuzestan;;Khuzestan;;;;;;;;;
 PER_1135;Fars-Kerman;Fars-Kerman;Fars-Kerman;;Fars-Kerman;;;;;;;;;
