--- a/GFM/localisation/000_Victoria Universalis.csv
+++ b/GFM/localisation/000_Victoria Universalis.csv
@@ -41,7 +41,7 @@ HAN_538;Westhannover;;;;;;;;;;;;;
 FRA_415;Amiens;;;;;;;;;;;;;
 FRA_473;Corsica;;;;;;;;;;;;;
 JAN_3246;Jan Mayen;;;;;;;;;;;;;
-PER_1142;Laristan;;;;;;;;;;;;;
+PER_1142;Larestan;;;;;;;;;;;;;
 PER_1144;Sistan;;;;;;;;;;;;;
 JAP_1638;Chugoku;;;;;;;;;;;;;
 JAP_1659;Kyoto;;;;;;;;;;;;;
