--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1385,7 +1385,7 @@ PROV4010;Huánuco;;;;;;;;;;;;;
 PROV4011;Katirpisa;;;;;;;;;;;;;
 PROV4012;Kashijint;;;;;;;;;;;;;
 PROV4013;Iquitos;;;;;;;;;;;;;
-PROV4014;Yurimaguas;;;;;;;;;;;;;
+PROV4014;Kukamiria;;;;;;;;;;;;;
 PROV4015;Caballococha;;;;;;;;;;;;;
 PROV4016;Tena;;;;;;;;;;;;;
 PROV4017;San Carlos;;;;;;;;;;;;;
@@ -1459,4 +1459,5 @@ PROV4101;Beesowu;;;;;;;;;;;;;
 PROV4102;Nanwuine'nan;;;;;;;;;;;;;
 PROV4103;Ammalapáshkuua;;;;;;;;;;;;;
 PROV4104;Tunja;;;;;;;;;;;;;
+PROV4105;Cajamarca;;;;;;;;;;;;;
 PROV2293;Nó'ciria;;;;;;;;;;;;;
